Clean up exploratory changes and update documentation
- Restore build.gradle to use official MCP SDK 0.10.0
- Remove all TCP-related experimental code
- Clean up temporary test files and scripts
- Update CLAUDE.md with current project status and known SDK issues
- Document next steps pending SDK bug fixes